# real-estate

./: package-lock.json  package.json
backend/: Cargo.toml  app.js  package.json
backend/controllers/: auth.controller.js  listing.controller.js  user.controller.js
backend/models/: listing.model.js  user.model.js
backend/routes/: auth.routes.js  listing.routes.js  user.routes.js
backend/src/: app_state.rs  main.rs
backend/src/controllers/: healthy_checker.rs  mod.rs  user_controller.rs
backend/src/errors/: custom_error.rs
backend/src/models/: db.rs  mod.rs  response.rs  user_model.rs
backend/src/routes/: route.rs
backend/src/utils/: hashPassword.rs  jwt.rs  mod.rs  token_wrapper.rs
backend/utils/: error.js  verify.js
client/: package-lock.json
client/src/: App.jsx  firebase.js  main.jsx
client/src/components/: Contact.jsx  InputComponent.jsx  ListingItem.jsx  Oauth.jsx  header.jsx  privateRoute.jsx
client/src/pages/: About.jsx  CreateListing.jsx  Home.jsx  Listings.jsx  Profile.jsx  Search.jsx  Signin.jsx  Signup.jsx  UpdateListing.jsx  index.jsx
client/src/store/: auth.js  store.js
