[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = { version = "0.6.20", features = ["headers", "macros"]}
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }
mongodb = { version = "2.7.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"]}
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tracing = "0.1.37"
validator = { version = "0.16.1", features = ["derive"] }
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"